Revision history for Perl extension Inline::CPP.

0.54 2014-07-29
  - Added LICENSE file (no change to licensing, however).

0.53 2014-07-29
  - lib/Inline/CPP/grammar.pm renamed to Grammar.pm.

0.52 2014-07-29
  - Reorganized distribution file heirarchy to conform to modern structure.
  - Silence irrelevant ntype warnings from typeconv().

0.51 2014-07-28
  - Add NAMESPACE configuration option to override a class's base namespace
    (Eliminates the need for the "Namespace Hack").
  - Tests now run recursively from subdirectories.
  - POD updates to explain NAMESPACE config option.
  - Tests for NAMESPACE config option.

0.50 2014-02-05
  - Fix POD markup error.

0.49 2014-02-03
  - Eliminate some dead code.
  - Better documentation of parallel compilation issues (which never show up
    in real-world use).

0.48 2014-01-31
  - Previous patch got misapplied.  Fixed now.  Close RT92595 again. ;)

0.47 2014-01-30
  - Applied patch from Graham Ollis closing RT#92595:
    FreeBSD v10 uses the clang++ compiler, and so do we.

0.46 2013-10-29
  - Add a newline before MODULE keyword to fix RT#89839(srezic).

0.45 2013-09-17
  - Fix POD syntax errors.
  - Remove TODO list from POD.

0.44 2013-05-17
  - Add flocking to output file handling in CPP.pm and Makefile.PL to prevent
    race conditions that might occur during parallel testing.
    (Note: There are still race-condition issues in Inline that will affect
    us until they're fixed.)

0.43 2013-05-04
  - Require Inline::C version 0.53 to mainstream the bug fix that addressed
    Inline's RT # 11748, and Inline::CPP's RT#84762.
  - No changes from 0.42_002 (dev) other than to bump the version number to a
    'production' number.
    
0.42_002 2013-04-24
  - Require Inline::C version 0.52_02, to test a fix for the bug raised in
    Inline's RT #11748, and Inline::CPP's RT #84762: Typemaps were causing INC
    to be clobbered.  Though this may be an Inline::CPP bug, the simplest fix